coverted imgs into svg and corrected vid-section spacing

--- a/assets/css/abstracts/_mixins.scss
+++ b/assets/css/abstracts/_mixins.scss
@@ -22,4 +22,9 @@
       @content;
     }
   }
+  @else if $device == "xxs-devices" {
+    @media (max-width: 370px) {
+      @content;
+    }
+  }
 }
